Fix change password bug

--- a/poli-meets-ui/src/app/components/feedback/give-feedback/my-feedback/my-feedback.component.html
+++ b/poli-meets-ui/src/app/components/feedback/give-feedback/my-feedback/my-feedback.component.html
@@ -33,7 +33,7 @@
 
                 <div class="section">
                     <mat-icon>timeline</mat-icon>
-                    <p class="info"><span>Study Cicle</span><br>{{study_cicle}}</p>
+                    <p class="info"><span>Study Cicle</span><br>{{studyCycle}}</p>
                 </div>
 
                 <div class="section">
