--- a/poli-meets-ui/src/app/components/dialog/account-information-dialog/photo-step/photo-step.component.scss
+++ b/poli-meets-ui/src/app/components/dialog/account-information-dialog/photo-step/photo-step.component.scss
@@ -75,5 +75,14 @@
 
     .account-form-buttons {
         justify-content: space-between;
+
+        &.end {
+            justify-content: flex-end;
+        }
+    }
+
+    div {
+        display: flex;
+        gap: 16px;
     }
 }
