--- a/poli-meets-ui/src/app/components/dialog/account-information-dialog/account-information-dialog.component.scss
+++ b/poli-meets-ui/src/app/components/dialog/account-information-dialog/account-information-dialog.component.scss
@@ -108,3 +108,9 @@
 .mat-mdc-dialog-content {
     max-height: 85vh;
 }
+
+.cdk-overlay-dark-backdrop {
+    background: rgba(0, 0, 0, 0.32);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+}
