--- a/poli-meets-ui/src/app/components/dialog/mentor-dialog/mentor-dialog.component.html
+++ b/poli-meets-ui/src/app/components/dialog/mentor-dialog/mentor-dialog.component.html
@@ -1,32 +1,55 @@
 <mat-dialog-content class="mentor-dialog">
-    <div class="dialog-header">
-        <p>Become a mentor today!</p>
+    <div class="dialog-header" *ngIf="isMentor">
+        <p>Review Mentor Profile</p>
 
-        <p>Once submitted, all users will be able to see your profile and calendar in the <b>Mentors</b> section.
-            Make
-            sure to add your free slots in the <b>Upcoming Meetings</b> section to start helping other students.
+        <p>Update your mentor profile or keep the current preferences.</p>
+
+        <span>* required fields</span>
+    </div>
+
+    <div class="dialog-header" *ngIf="!isMentor">
+        <p>Complete Mentor Profile</p>
+
+        <p>Once submitted, all users will be able to see your profile and calendar in the
+            <b>Mentors</b> section.
+            Make sure to add your free slots in the <b>Upcoming Meetings</b> section to start helping other students.
         </p>
+
+        <span>* required fields</span>
     </div>
 
     <div class="dialog-content">
-        <p>Please fill in the following information in order to complete your mentor profile.</p>
-
         <form [formGroup]="mentorInfoForm">
             <div class="mentor-info-fields">
-                <mat-label>Select your <strong>existing</strong> technical skills.</mat-label>
+                <mat-label *ngIf="!isMentor">Write a <strong>brief</strong> description about you and your interests.
+                    <span>*</span></mat-label>
+                <mat-label *ngIf="isMentor">Description <span>*</span>
+                </mat-label>
+                <mat-form-field appearance="fill">
+                    <textarea matInput formControlName="description" placeholder="Write your description"></textarea>
+                    <mat-hint align="end">{{descriptionLength}}/{{maxDescriptionLength}} maximum characters</mat-hint>
+                </mat-form-field>
+
+                <mat-label *ngIf="!isMentor">Select your <strong>existing</strong> technical skills.
+                    <span>*</span></mat-label>
+                <mat-label *ngIf="isMentor">Technical skills <span>*</span>
+                </mat-label>
                 <mat-form-field appearance="fill">
                     <mat-select formControlName="skills" placeholder="Select skills" multiple>
-                        <mat-option *ngFor="let skill of skills" [value]="skill">
-                            {{skill}}
+                        <mat-option *ngFor="let skill of skills" [value]="skill.id">
+                            {{skill.name}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
 
-                <mat-label>Select the subjects that you have <strong> great knowledge</strong> of.</mat-label>
+                <mat-label *ngIf="!isMentor">Select the subjects that you have <strong> great knowledge</strong> of.
+                    <span>*</span></mat-label>
+                <mat-label *ngIf="isMentor">The subjects you may teach
+                    <span>*</span></mat-label>
                 <mat-form-field appearance="fill">
                     <mat-select formControlName="subjects" placeholder="Select subjects" multiple>
-                        <mat-option *ngFor="let subject of subjects" [value]="subject">
-                            {{subject}}
+                        <mat-option *ngFor="let subject of subjects" [value]="subject.id">
+                            {{subject.name}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
@@ -36,6 +59,8 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-    <button mat-button color="primary" cdkFocusInitial>SUBMIT</button>
-    <button mat-button color="primary">CLOSE</button>
+    <button mat-button color="primary" cdkFocusInitial
+        [disabled]="!mentorInfoForm.valid || isMentor && !isChangedDescription && !areChangedSkills && !areChangedSubjects"
+        (click)="onMentorInfoSubmit()">SUBMIT</button>
+    <button mat-button color="primary" mat-dialog-close="close">CLOSE</button>
 </mat-dialog-actions>
