--- a/poli-meets-ui/src/app/components/dialog/mentor-dialog/mentor-dialog.component.scss
+++ b/poli-meets-ui/src/app/components/dialog/mentor-dialog/mentor-dialog.component.scss
@@ -4,6 +4,7 @@
 
 .mat-mdc-dialog-container {
     max-width: 50vw;
+    min-width: 40vw;
 }
 
 .mat-mdc-dialog-content {
@@ -16,22 +17,32 @@
 
 .dialog-header {
     background-color: $primary;
-    padding: 32px;
+    padding: 32px 40px;
 
     p {
         margin: 0;
         color: #f5f5f5;
         font-weight: 400;
+        font-size: small;
+        padding: 0 0 24px 0;
     }
 
     p:first-of-type {
-        padding-bottom: 32px;
-        font-size: xx-large;
+        font-size: x-large;
+        font-weight: 600;
+        padding: 8px 0 16px 0;
+    }
+
+
+    span {
+        font-weight: 500;
+        font-size: x-small;
+        color: $warn;
     }
 }
 
 .dialog-content {
-    padding: 32px;
+    padding: 24px 32px;
 
     p {
         margin: 0;
@@ -43,12 +54,38 @@
     .mentor-info-fields {
         display: flex;
         flex-direction: column;
-        padding: 24px 0 0 0;
 
         mat-label {
-            font-size: small;
-            font-weight: 400;
+            font-size: smaller;
+            font-weight: 500;
             color: $font-color-light;
+            padding: 8px;
+            line-height: normal;
+
+            span {
+                font-weight: 500;
+                font-size: x-small;
+                color: $warn;
+            }
         }
     }
+}
+
+.cdk-overlay-dark-backdrop {
+    background: rgba(0, 0, 0, 0.32);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+}
+
+.mdc-text-field--invalid .mdc-text-field__input {
+    caret-color: inherit;
+}
+
+.mat-mdc-form-field .mat-mdc-select.mat-mdc-select-invalid .mat-mdc-select-arrow {
+    color: inherit;
+}
+
+.mat-mdc-dialog-actions.mat-mdc-dialog-actions-align-end,
+.mat-mdc-dialog-actions[align=end] {
+    gap: 16px;
 }
