--- a/poli-meets-ui/src/app/components/my-account/my-account.component.scss
+++ b/poli-meets-ui/src/app/components/my-account/my-account.component.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500");
 @import "../../../font_colors";
 @import "../../../theme_variables";
+@import "../../../text_form_field";
 
 .account-container-padding {
     padding-top: 64px; // dimensiunea navbar-ului
@@ -19,12 +20,13 @@
             flex-direction: column;
 
             .profile-photo {
-                width: 400px;
-                height: 400px;
+                width: 450px;
+                height: 450px;
                 border-radius: 4px;
                 overflow: hidden;
                 box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
                 margin-bottom: 24px;
+                position: relative;
 
                 img {
                     width: 100%;
@@ -32,14 +34,138 @@
                     object-fit: cover;
                     object-position: center center;
                 }
+
+                .profile-photo-edit {
+                    position: absolute;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: flex-end;
+                    justify-content: flex-end;
+
+                    button {
+                        background-color: white;
+                    }
+
+                    .mat-mdc-icon-button {
+                        border-radius: 50% 50% 0 50%;
+                    }
+
+                    .mat-mdc-icon-button .mat-mdc-button-persistent-ripple {
+                        border-radius: 50% 50% 0 50%;
+                    }
+                }
             }
 
-            // .reset-password {
-            //     .password-form-fields {
-            //         display: flex;
-            //         flex-direction: column;
-            //     }
-            // }
+            .reset-password {
+                box-shadow: rgba(0, 29, 61, 0.2) 0px 0px 0px 1.5px;
+
+                .header {
+                    display: flex;
+                    align-items: flex-end;
+                    flex-direction: column;
+                    padding-bottom: 8px;
+
+                    div {
+                        display: flex;
+                        align-items: center;
+                        flex-direction: column;
+                        width: 100%;
+                    }
+
+                    p:first-of-type {
+                        font-size: x-large;
+                        font-weight: 600;
+                        margin: 0;
+                        padding: 24px 0 16px 0;
+                        color: $font-color;
+                    }
+
+                    p:nth-of-type(2) {
+                        color: $font-color-light;
+                        font-size: small;
+                        margin: 0;
+                        padding: 0 0 24px 0;
+                        font-weight: 400;
+                    }
+
+                    span {
+                        font-weight: 500;
+                        font-size: x-small;
+                        color: $warn;
+                    }
+                }
+
+                .password-form-fields {
+                    display: flex;
+                    flex-direction: column;
+
+                    mat-icon {
+                        color: $primary;
+                    }
+
+                    .mat-mdc-form-field-text-prefix {
+                        padding: 13px;
+                        height: 30px;
+                        background-color: rgba(0, 29, 61, 0.2);
+                    }
+
+                    .mat-mdc-form-field-flex {
+                        align-items: center;
+                    }
+
+                    .mdc-text-field {
+                        padding-left: 0;
+                    }
+
+                    .mat-mdc-form-field-infix {
+                        padding-left: 8px;
+                    }
+
+                    mat-label {
+                        font-size: smaller;
+                        font-weight: 500;
+                        color: $font-color-light;
+                        padding: 8px;
+
+                        &.new-password-label {
+                            display: inline-flex;
+                            align-items: center;
+                            justify-content: space-between;
+                            padding-bottom: 4px;
+                        }
+
+                        .required {
+                            font-weight: 500;
+                            font-size: x-small;
+                            color: $warn;
+                        }
+
+                        .info {
+                            transform: scale(0.7);
+                            color: $font-color-light
+                        }
+                    }
+                }
+
+                .password-buttons {
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 16px 0;
+                }
+
+                .incorrect-form {
+                    background-color: #ffcfd6;
+                    font-weight: normal;
+                    font-size: small;
+                    padding: 8px 0;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 8px;
+                }
+            }
         }
 
         .right-container {
@@ -86,7 +212,7 @@
             .mat-card-faculty {
                 margin: 24px 0;
                 box-shadow: none;
-                background-color: rgba(0, 0, 0, 0.05) !important;
+                background-color: #F5F5F5 !important;
                 border-radius: 0 90px 90px 0 !important;
 
                 .faculty-section {
@@ -127,6 +253,11 @@
                     display: flex;
                     flex-direction: column;
                     gap: 24px;
+
+                    mat-card {
+                        box-shadow: none;
+                        background-color: #F5F5F5;
+                    }
 
                     .label {
                         color: $font-color-light;
@@ -177,4 +308,18 @@
             }
         }
     }
+}
+
+.mdc-text-field--invalid .mdc-text-field__input {
+    caret-color: inherit;
+}
+
+.mat-mdc-snack-bar-container .mdc-snackbar__surface {
+    min-width: auto !important;
+    padding: 0 50px 0 50px;
+}
+
+.mat-mdc-snack-bar-container .mdc-snackbar__label {
+    padding-left: 0;
+    padding-right: 0;
 }
