Added upcoming meetings page

--- a/poli-meets-ui/src/app/components/dialog/account-information-dialog/account-information-dialog.component.html
+++ b/poli-meets-ui/src/app/components/dialog/account-information-dialog/account-information-dialog.component.html
@@ -1,4 +1,4 @@
-<mat-dialog-content>
+<mat-dialog-content class="account-dialog">
     <div class="account-setup-container">
         <div *ngIf="accountSetupStep" class="step-guide" data-aos="fade-right" data-aos-duration="500">
             <img src="assets/images/auth/account-setup-overlay.png">
