--- a/poli-meets-ui/src/app/components/dialog/account-information-dialog/account-information-dialog.component.scss
+++ b/poli-meets-ui/src/app/components/dialog/account-information-dialog/account-information-dialog.component.scss
@@ -105,7 +105,7 @@
     padding-right: 0;
 }
 
-.mat-mdc-dialog-content {
+.mat-mdc-dialog-content.mdc-dialog__content.account-dialog {
     max-height: 85vh;
 }
 
