--- a/poli-meets-ui/src/app/components/dialog/photo-dialog/photo-dialog.component.scss
+++ b/poli-meets-ui/src/app/components/dialog/photo-dialog/photo-dialog.component.scss
@@ -1,7 +1,7 @@
-.mat-mdc-dialog-content {
+.mat-mdc-dialog-content.mdc-dialog__content.photo-dialog {
     max-height: 85vh;
     max-width: 50vw;
-    padding: 32px 40px !important;
+    padding: 32px 40px;
 }
 
 .cdk-overlay-dark-backdrop {
