--- a/poli-meets-ui/src/app/components/my-account/my-account.component.scss
+++ b/poli-meets-ui/src/app/components/my-account/my-account.component.scss
@@ -323,3 +323,10 @@
     padding-left: 0;
     padding-right: 0;
 }
+
+.mentor-dialog {
+    .mat-mdc-dialog-container {
+        max-width: 50vw;
+        min-width: 40vw;
+    }
+}
