--- a/poli-meets-ui/src/app/components/dialog/photo-dialog/photo-dialog.component.html
+++ b/poli-meets-ui/src/app/components/dialog/photo-dialog/photo-dialog.component.html
@@ -1,3 +1,3 @@
-<mat-dialog-content>
+<mat-dialog-content class="photo-dialog">
     <app-photo-step [isEdit]="true" (submit)="onAccountInfoSubmit($event)"></app-photo-step>
 </mat-dialog-content>
