--- a/poli-meets-ui/src/app/components/feedback/give-feedback/my-feedback/my-feedback.component.html
+++ b/poli-meets-ui/src/app/components/feedback/give-feedback/my-feedback/my-feedback.component.html
@@ -9,8 +9,8 @@
 
             <div class="secondary-content">
                 <div class="left-section" routerLink="/feedback/me/subjects">
-                    <p>{{numSubjectsForFeedback}} subjects left for feedback</p>
-                    <p>{{numAvailableSubjectsForFeedback}} are available</p>
+                    <p>{{numAvailableSubjectsForFeedback}} subjects left for feedback</p>
+                    <p>{{numSubmittedSubjectsForFeedback}} subjects submitted </p>
                 </div>
                 <!-- TODO: redirect to contact page when it will exist -->
                 <div class="right-section" routerLink="/home">
