--- a/poli-meets-ui/src/app/components/feedback/view-feedback/all-subjects/all-subjects.component.html
+++ b/poli-meets-ui/src/app/components/feedback/view-feedback/all-subjects/all-subjects.component.html
@@ -6,8 +6,8 @@
 
             <div class="secondary-content">
                 <div class="left-section">
-                    <p>Automatic Control and Computer Science</p>
-                    <p>Computer and Information Technology </p>
+                    <p>{{feedbackFaculty?.name}}</p>
+                    <p>{{feedbackFaculty?.domain}} </p>
                 </div>
                 <!-- TODO: redirect to contact page when it will exist -->
                 <div class="right-section" routerLink="/home">
@@ -17,26 +17,55 @@
         </mat-card>
 
         <mat-tab-group animationDuration="1000ms">
-            <mat-tab label="I">
+            <mat-tab *ngFor="let year of getYears()" label="{{getYearValue(year)}}">
                 <p class="choose-series">
-<!--                    <mat-button-toggle-group class = "toggle-buttons" appearance="legacy" name="fontStyle" aria-label="Font Style">-->
-<!--                        <mat-button-toggle class="toggle-button" value="bold">Bold</mat-button-toggle>-->
-<!--                        <mat-button-toggle class="toggle-button" value="italic">Italic</mat-button-toggle>-->
-<!--                        <mat-button-toggle class="toggle-button" value="underline">Underline</mat-button-toggle>-->
-<!--                    </mat-button-toggle-group>-->
                     Choose series:
-                    <mat-button-toggle-group >
-                        <mat-button-toggle value="summer">Summer</mat-button-toggle>
-                        <mat-button-toggle value="winter">
-                            Winter
+                    <mat-button-toggle-group [(ngModel)]="seriesButton" >
+                        <mat-button-toggle *ngFor="let series of getSeries(year)" value="{{series}}">
+                            {{series}}
                         </mat-button-toggle>
-                        <mat-button-toggle value="mansoon">Mansoon</mat-button-toggle>
                     </mat-button-toggle-group>
                 </p>
-            </mat-tab>
-            <mat-tab label="II">
 
+                <div class="subject-cards">
+                    <mat-card class="subject-card" *ngFor="let subject of getUniversityClasses(year, seriesButton)">
+                        <mat-card-header  >
+                            <mat-card-subtitle > {{getSemesterValue(subject.semester)}}
+                            </mat-card-subtitle>
+                        </mat-card-header>
+
+                        <mat-card-content>
+                            <div class="stars-section">
+                                <div class="star"  *ngFor="let star of [].constructor(getGradeRounded(subject.gradeOverall));">
+                                    <mat-icon>
+                                        star
+                                    </mat-icon>
+                                </div>
+
+                                <div class="star"  *ngFor="let star of [].constructor(5 - (getGradeRounded(subject.gradeOverall)))">
+                                    <mat-icon>
+                                        star_border
+                                    </mat-icon>
+                                </div>
+
+                                <div class="grade-text" >
+                                    {{getGradeWithOneDecimal(subject.gradeOverall)}} / 5.0
+                                </div>
+                            </div>
+
+                            <mat-card-title> {{subject.name}}</mat-card-title>
+
+                            <div class="redirect">
+                                <div class="clickable-content" routerLink="/feedback/me/subjects/{{subject.id}}/form">
+                                    <span>View subject feedback</span>
+                                    <mat-icon>open_in_new</mat-icon>
+                                </div>
+                            </div>
+                        </mat-card-content>
+                    </mat-card>
+                </div>
             </mat-tab>
+
         </mat-tab-group>
 
     </div>
